# MedicalQC

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
conf/: config.yaml
conf/data/: data.yaml
conf/eval/: eval.yaml
conf/federated/: federated.yaml
conf/mlflow/: mlflow.yaml
conf/model/: model.yaml
conf/train/: train.yaml
src/: __init__.py  train_central.py  train_federated.py
src/configs/: __init__.py  hydra.py  schema.py
src/data/: __init__.py  datamodule.py  datasets.py  samplers.py
src/eval/: __init__.py  evaluator.py  metrics.py
src/federated/: __init__.py  aggregation.py  client.py  runner.py  server.py
src/infer/: infer_study.py  service_stub.py
src/models/: __init__.py  lora.py  mil.py  model.py  qc_model.py  spectral.py  swin_encoder.py  uncertainty.py
src/train/: __init__.py  central_trainer.py  federated_trainer.py
src/utils/: __init__.py  config.py  env.py  io.py  logging.py  mlflow_utils.py  plots.py  seed.py
tests/integration/: test_central_training.py  test_federated_runner.py
tests/unit/: test_lora_params.py  test_lora_state.py  test_metrics_sklearn.py  test_mil_collate.py  test_mil_pooling.py  test_plots.py  test_qc_model.py  test_sampling_determinism.py  test_spectral_encoder.py  test_spectral_gradients.py  test_temperature_scaling.py  test_uncertainty_head.py
