[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicalqc"
version = "0.1.0"
description = "Federated domain-generalized QC for CT/MRI scanners"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "MedicalQC Team"}]
license = {text = "Proprietary"}

dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "torch>=2.0",
  "torchvision>=0.15",
  "timm>=0.9",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "mlflow>=2.6",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "pillow>=9.5",
  "packaging>=23.1"
]

[project.optional-dependencies]
dicom = ["pydicom>=2.4"]
dev = [
  "black==26.1.0",
  "ruff>=0.3",
  "isort>=5.13",
  "mypy>=1.7",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "types-PyYAML>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["src", "src.*"]

[tool.black]
line-length = 88
required-version = "26.1.0"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
